# Indice-remisivo

./: CMakeLists.txt  keywords.txt  keywords2.txt  texto.txt
datasets/: alice.txt  file1.txt  file2.txt  file3.txt  k_textoBIG.txt
outputs/benchmarks/: benchmark_AVL.txt  benchmark_BST.txt  benchmark_Hash (Ziviani).txt  benchmark_Lista_encadeada.txt  benchmark_closedHash.txt  benchmarks_ALL.txt
outputs/indices_remisivo/: indice_Lista_encadeada.txt
source/: helps.cpp  helps.h  indice_list.cpp  indice_list.h  list.cpp  main.cpp
source/avl/: avlTree.cpp  avlTree.h
source/benchmarks/: benchmarks.cpp  benchmarks.h  tesst.txt
source/bst/: tree.cpp  tree.h
source/hash/: closedHash.cpp  closedHash.h  hash.cpp  hash.h  hashTable.cpp  hashTable.h  hashZiviani.cpp  hashZiviani.h  hash_linkedList.cpp  hash_linkedList.h  openHash.cpp  openHash.h
source/linked_list/: List.cpp  List.h  indice_list.cpp  indice_list.h  list.cpp  list.h
source/tree/: tree.cpp  tree.h
