cmake_minimum_required(VERSION 3.14)
project(Indice_Remisivo)

set(CMAKE_CXX_STANDARD 14)

add_executable(Indice_Remisivo source/main.cpp source/helps.cpp source/linked_list/list.cpp source/linked_list/list.h source/helps.h source/indice_list.cpp source/indice_list.h source/tree/tree.cpp source/tree/tree.h)